--- a/style.css
+++ b/style.css
@@ -12,9 +12,14 @@ body {
   height: 100vh;
 }
 
-.text {
+.text--white {
   font-family: "Raleway", sans-serif;
   color: aliceblue;
+}
+
+.text--black {
+  font-family: "Raleway", sans-serif;
+  color: #444649;
 }
 
 .splash__text {
@@ -69,9 +74,11 @@ block {
 }
 
 .navbar {
+  position: sticky;
+  top: 0px;
   list-style-type: none;
   display: flex;
-  border: 5px solid teal;
+  border-bottom: 3px solid teal;
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -89,7 +96,7 @@ block {
   font-size: 18px;
   display: block;
   text-align: center;
-  padding: 14px 16px;
+  padding-right: 14px;
   text-decoration: none;
 }
 
@@ -99,16 +106,18 @@ block {
 }
 
 .about {
+  opacity: 0;
   display: flex;
   align-content: center;
   height: 1000px;
 }
 
 .about__header {
+  line-height: 100px;
+  font-size: 30pt;
   width: 400px;
   height: 100px;
   margin: 100px auto;
-  padding-top: 50px;
-  background: red;
   text-align: center;
+  font-weight: bold;
 }
