--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body {
   padding: 0px;
 }
 
+.canvas {
+  background-color: red;
+}
+
 .splash {
   display: flex;
   flex-direction: column;
@@ -106,18 +110,34 @@ block {
 }
 
 .about {
+  border: yellow solid 3px;
+  flex-flow: column;
+  justify-content: center;
   opacity: 0;
-  display: flex;
+  /* display: flex; */
   align-content: center;
   height: 1000px;
 }
 
+.about__box {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+}
 .about__header {
-  line-height: 100px;
-  font-size: 30pt;
-  width: 400px;
-  height: 100px;
-  margin: 100px auto;
+  align-content: center;
+  height: 60px;
+  font-size: 40pt;
   text-align: center;
   font-weight: bold;
+}
+
+.blah {
+  background-color: #444649;
+  color: #1b242f;
+  height: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 13%;
 }
