--- a/style.css
+++ b/style.css
@@ -150,14 +150,36 @@ u {
   width: 8%;
 }
 .about__container {
+  padding: 80px 8% 3%;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   display: grid;
   height: 100%;
   background-color: rgb(217, 255, 0);
-  grid-gap: 10px;
+  grid-gap: 5%;
 }
 
 .about__container__item1 {
-  height: 30%;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 20%;
   background-color: blue;
+}
+
+.about__octagon__image {
+  height: 100px;
+  padding: 10%;
+}
+
+.about__container_item1__title {
+  text-align: center;
+  margin: auto;
+  color: aliceblue;
+}
+
+.about__container_item1__text {
+  text-align: center;
+  margin: auto;
+  color: aliceblue;
 }
