--- a/style.css
+++ b/style.css
@@ -161,23 +161,39 @@ block {
 }
 
 .about__container__item1 {
-  padding: 5%;
+  /* padding: 5%; */
   flex-direction: column;
   display: flex;
   align-items: center;
   width: 100%;
-  height: 20%;
+  height: 100%;
 }
 
 .about__octagon__image {
   height: 100px;
-  padding: 5%;
+  /* padding: 5%; */
+}
+
+.octagon__box {
+  display: flex;
+  height: 100%;
+  /* padding: 5%; */
+  background-image: url("./images/hexagon-xxl.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.octagon__box__image {
+  display: block;
+  margin: auto;
+  width: 50%;
+  height: 50%;
 }
 
 .about__container_item1__title {
   text-align: center;
   margin: auto;
-  padding: 5px;
+  padding: 2px;
 }
 
 .about__container_item1__text {
