--- a/style.css
+++ b/style.css
@@ -154,7 +154,10 @@ block {
 }
 .about__container {
   padding: 80px 8% 3%;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  /* grid-template-columns: 1fr 1fr 1fr 1fr; */
+  grid-template-areas:
+    "a b c d"
+    "e e f f";
   display: grid;
   height: 100%;
   grid-gap: 5%;
@@ -167,6 +170,30 @@ block {
   align-items: center;
   width: 100%;
   height: 100%;
+}
+
+.item--a {
+  grid-area: a;
+}
+
+.item--b {
+  grid-area: b;
+}
+
+.item--c {
+  grid-area: c;
+}
+
+.item--d {
+  grid-area: d;
+}
+
+.item--e {
+  grid-area: e;
+}
+
+.item--f {
+  grid-area: f;
 }
 
 .about__octagon__image {
@@ -205,4 +232,19 @@ block {
 .text__h3--black {
   font-size: 18pt;
   font-family: "Raleway-bold";
+}
+
+.mypic {
+  height: 70%;
+  width: 60%;
+  border-radius: 50%;
+}
+
+.about__container_bio__title {
+  text-align: center;
+  margin: auto;
+  padding: 2px;
+}
+.about__container_bio__paragraph {
+  padding-top: 2%;
 }
