--- a/style.css
+++ b/style.css
@@ -136,24 +136,35 @@ block {
   grid-template-columns: 1fr 1fr 1fr;
   height: 90%;
   width: 100%;
-  border: 3px solid red;
 }
 
 .navbar__section__icon-Box > div {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  margin: auto;
   height: 60px;
 }
 
 .navbar__gitlab__icon {
-  height: 100%;
+  height: 80px;
 }
 
-/* .navbar__github__icon {
-  height: 50%;
+.navbar__github__icon {
+  height: 40px;
+  padding: 5px;
+  padding-left: 20px;
 }
 
 .navbar__linkedin__icon {
-  height: 50%;
-} */
+  height: 40px;
+  padding-top: 8px;
+  padding-left: 30px;
+}
+
+.icon__anchor {
+  height: 100%;
+}
 
 /* .github__box {
   align-items: center;
@@ -276,7 +287,7 @@ block {
 
 .mypic {
   height: 70%;
-  width: 60%;
+  width: 50%;
   border-radius: 50%;
 }
 
