--- a/style.css
+++ b/style.css
@@ -15,7 +15,14 @@ body {
   padding: 0px;
 }
 
-.canvas {
+canvas {
+  background-color: black;
+  width: 100%;
+  height: 100vh;
+  position:absolute;
+  left:0;
+  top:0;
+  z-index:-1;
 }
 
 .test {
@@ -28,7 +35,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: black;
+  /* background-color: black; */
   height: 100vh;
 }
 
