--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ block {
   justify-content: center;
   display: flex;
   align-content: center;
-  height: 1000px;
+  height: 800px;
 }
 
 .about__box {
@@ -320,19 +320,20 @@ block {
     "xeta h i xet"
     "xeta j k xet";
   padding-top: 5%;
-  height: 70%;
+  height: 60%;
   display: grid;
 }
 
-.projects__container__item__h__content {
-  background-color: aliceblue;
+.projects__container__content__h3 {
+  font-weight: bold;
+  font-size: 16pt;
+  color: black !important;
   text-align: center;
-  margin: auto;
-  align-content: center;
-  width: 100%;
-  opacity: 0;
-  height: 100%;
+}
+.projects__container__content__p {
+  font-size: 12pt;
   color: black;
+  text-align: center;
 }
 
 .item--h {
@@ -364,4 +365,27 @@ block {
   /* background-image: url(./images/project-seed.png); */
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.contact {
+  flex-flow: column;
+  display: flex;
+  height: 90vh;
+}
+
+.contact__text {
+  text-align: center;
+  margin: 1%;
+  font-size: 18pt;
+}
+
+.submission-form {
+  max-width: 500px;
+  margin: 1rem auto;
+  height: 50%;
+  width: 50%;
+  display: block;
+  align-content: center;
+  align-items: center;
+  justify-content: flex-start;
 }
