--- a/style.css
+++ b/style.css
@@ -182,6 +182,7 @@ block {
 }
 
 .about {
+  width: 100%;
   flex-flow: column;
   justify-content: center;
   display: flex;
@@ -247,7 +248,13 @@ block {
 }
 
 .item--e {
+  display: flex;
   grid-area: e;
+  margin: auto;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  width: 80%;
 }
 
 .item--f {
@@ -297,12 +304,18 @@ block {
 }
 
 .about__container_bio__title {
+  width: 60%;
   text-align: center;
-  margin: auto;
+  margin: 2rem auto;
   padding: 2px;
 }
 .about__container_bio__paragraph {
   padding-top: 2%;
+  width: 100%;
+  text-align: center;
+  margin: -1;
+  padding: -1;
+  border: 3px red solid;
 }
 
 .projects {
@@ -374,8 +387,9 @@ block {
 }
 
 .contact__text {
+  width: 60%;
   text-align: center;
-  margin: 1%;
+  margin: 2rem auto;
   font-size: 18pt;
 }
 
