--- a/style.css
+++ b/style.css
@@ -402,3 +402,50 @@ block {
   align-items: center;
   justify-content: flex-start;
 }
+
+@media screen and (max-width: 760px) {
+  .about__container {
+    padding: 80px 8% 3%;
+    grid-template-areas:
+      "a b"
+      "c d"
+      "e e"
+      "f f";
+    display: grid;
+    height: 100%;
+    grid-gap: 5%;
+  }
+
+  .projects__container {
+    width: 100%;
+    overflow: hidden;
+    margin: 0.2em auto;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 30% 30% 30% 30%;
+    grid-template-areas:
+      "h i"
+      "j k";
+    padding-top: 5%;
+    height: 60%;
+    display: grid;
+  }
+  .about {
+    width: 100%;
+    flex-flow: column;
+    justify-content: center;
+    display: flex;
+    align-content: center;
+    height: 100%;
+  }
+
+  .projects {
+    background-color: #f5f5f5;
+    height: 100%;
+  }
+  .navbar {
+    display: none;
+  }
+  .contact__text {
+    display: none;
+  }
+}
