--- a/style.css
+++ b/style.css
@@ -403,6 +403,37 @@ block {
   justify-content: flex-start;
 }
 
+.footer {
+  border: 3px solid black;
+  background-color: black;
+  width: 100%;
+  height: 50px;
+  z-index: 100;
+  position: sticky;
+  list-style-type: none;
+  display: none;
+  list-style-type: none;
+  margin: 0;
+  overflow: hidden;
+  align-items: flex-start;
+  align-content: center;
+  justify-content: center;
+}
+.footer__linkedin__icon {
+  height: 30px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+}
+.footer__gitHub__icon {
+  height: 30px;
+  padding-bottom: 10px;
+  padding-left: 5px;
+  padding-right: 6px;
+}
+.footer__gitLab__icon {
+  height: 50px;
+}
+
 @media screen and (max-width: 760px) {
   .about__container {
     padding: 80px 8% 3%;
@@ -447,5 +478,9 @@ block {
   }
   .contact__text {
     display: none;
+  }
+  .footer {
+    display: flex;
+    align-content: center;
   }
 }
